# CFDLab

./: .gitignore  CG.cpp  CG.h  CMakeLists.txt  CMakeLists.txt.mine  README.md  cell.hpp  grid.cpp  grid.hpp  init.cpp  laplace.cpp  laplace.h  parallel.cpp  simulation.cpp  solver.cpp  sor.hpp  spLU.cpp  spLU.h  temperature.cpp  temperature.hpp  uvp.cpp  uvp.hpp  visual.cpp  visual.hpp
scenarios/: Cavity100.pgm  Cavity100_65.pgm  Cavity100_par.pgm  FlowOverAStep.pgm  FluidTrap.pgm  KarmanVortexStreet.pgm  PlaneShearFlow.pgm  RayleighBenardConvection.pgm
src/: CG.cpp  CG.hpp  boundary_val.cpp  boundary_val.hpp  cell.cpp  datastructures.hpp  enums.hpp  helper.cpp  helper.hpp  init.hpp  main.cpp  multigrid.cpp  multigrid.hpp  parallel.hpp  simulation.hpp  solver.cpp  solver.hpp  sor.cpp  spLU.cpp
tests/: .gitignore
tests/cg/: cg.cpp
tests/multi/: NaturalConvection.pgm  multi.cpp
tests/spLU/: spLU.cpp
tests/worksheet1/: Cavity100.pgm  worksheet1.cpp
